results/SVCOMP/conversational/log-StripLeadingHyphens-2024_03_17_19_01_31.txt
import java.util.Arrays;

class StripLeadingHyphens {

    //@ requires str != null;
    //@ ensures \result != null && (\forall int i; 0 <= i && i < \result.length; \result[i] != '-');
    //@ ensures str[0] == '-' && str[1] == '-' ==> \result.length == str.length - 2 && (\forall int i; 0 <= i && i < \result.length; \result[i] == str[i+2]);
    //@ ensures str[0] == '-' && str[1] != '-' ==> \result.length == str.length - 1 && (\forall int i; 0 <= i && i < \result.length; \result[i] == str[i+1]);
    static char[] stripLeadingHyphens(char[] str) {
        boolean temp_Boolean = false;
        if (str == null) {
            return null;
        }
        temp_Boolean = (str[0] == '-' && str[1] == '-');
        if (temp_Boolean) {
            return Arrays.copyOfRange(str, 2, str.length);
        } else {
            temp_Boolean = str[0] == '-';
            if (temp_Boolean) {
                return Arrays.copyOfRange(str, 1, str.length);
            }
        }
        return str;
    }
    
}
/home/max/Documents/JMLGPT/tmp/StripLeadingHyphens.java:14: verify: The prover cannot establish an assertion (PossiblyTooLargeIndex) in method stripLeadingHyphens
        temp_Boolean = (str[0] == '-' && str[1] == '-');
                           ^
1 verification failure

import java.util.Arrays;

class StripLeadingHyphens {

    //@ requires str != null;
    //@ ensures \result != null && (\forall int i; 0 <= i && i < \result.length; \result[i] != '-');
    //@ ensures str.length >= 2 ==> str[0] == '-' && str[1] == '-' ==> \result.length == str.length - 2 && (\forall int i; 0 <= i && i < \result.length; \result[i] == str[i+2]);
    //@ ensures str.length >= 1 && str[0] == '-' && str[1] != '-' ==> \result.length == str.length - 1 && (\forall int i; 0 <= i && i < \result.length; \result[i] == str[i+1]);
    static char[] stripLeadingHyphens(char[] str) {
        boolean temp_Boolean = false;
        if (str == null) {
            return null;
        }
        assume str.length >= 2;
        temp_Boolean = (str[0] == '-' && str[1] == '-');
        if (temp_Boolean) {
            return Arrays.copyOfRange(str, 2, str.length);
        } else {
            assume str.length >= 1;
            temp_Boolean = str[0] == '-';
            if (temp_Boolean) {
                return Arrays.copyOfRange(str, 1, str.length);
            }
        }
        return str;
    }
    
}
/home/max/Documents/JMLGPT/tmp/StripLeadingHyphens.java:14: error: ';' expected
        assume str.length >= 2;
                  ^
/home/max/Documents/JMLGPT/tmp/StripLeadingHyphens.java:14: error: not a statement
        assume str.length >= 2;
                          ^
/home/max/Documents/JMLGPT/tmp/StripLeadingHyphens.java:19: error: ';' expected
            assume str.length >= 1;
                      ^
/home/max/Documents/JMLGPT/tmp/StripLeadingHyphens.java:19: error: not a statement
            assume str.length >= 1;
                              ^
4 errors

import java.util.Arrays;

class StripLeadingHyphens {

    //@ requires str != null;
    //@ ensures \result != null && (\forall int i; 0 <= i && i < \result.length; \result[i] != '-');
    //@ ensures str.length >= 2 ==> str[0] == '-' && str[1] == '-' ==> \result.length == str.length - 2 && (\forall int i; 0 <= i && i < \result.length; \result[i] == str[i+2]);
    //@ ensures str.length >= 1 && str[0] == '-' && str[1] != '-' ==> \result.length == str.length - 1 && (\forall int i; 0 <= i && i < \result.length; \result[i] == str[i+1]);
    static char[] stripLeadingHyphens(char[] str) {
        boolean temp_Boolean = false;
        if (str == null) {
            return null;
        }
        if (str.length >= 2) {
            temp_Boolean = (str[0] == '-' && str[1] == '-');
            if (temp_Boolean) {
                return Arrays.copyOfRange(str, 2, str.length);
            }
        }
        if (str.length >= 1) {
            temp_Boolean = str[0] == '-';
            if (temp_Boolean) {
                return Arrays.copyOfRange(str, 1, str.length);
            }
        }
        return str;
    }
    
}
/home/max/Documents/JMLGPT/tmp/StripLeadingHyphens.java:23: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/StripLeadingHyphens.java:6:) in method stripLeadingHyphens
                return Arrays.copyOfRange(str, 1, str.length);
                ^
/home/max/Documents/JMLGPT/tmp/StripLeadingHyphens.java:6: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/StripLeadingHyphens.java:23:
    //@ ensures \result != null && (\forall int i; 0 <= i && i < \result.length; \result[i] != '-');
        ^
2 verification failures

import java.util.Arrays;

class StripLeadingHyphens {

    //@ requires str != null;
    //@ ensures \result != null && (\forall int i; 0 <= i && i < \result.length; \result[i] != '-');
    //@ ensures str.length >= 2 ==> str[0] == '-' && str[1] == '-' ==> \result.length == str.length - 2 && (\forall int i; 0 <= i && i < \result.length; \result[i] == str[i+2]);
    //@ ensures str.length >= 1 && str[0] == '-' && str[1] != '-' ==> \result.length == str.length - 1 && (\forall int i; 0 <= i && i < \result.length; \result[i] == str[i+1]);
    static char[] stripLeadingHyphens(char[] str) {
        boolean temp_Boolean = false;
        if (str == null) {
            return null;
        }
        if (str.length >= 2) {
            temp_Boolean = (str[0] == '-' && str[1] == '-');
            if (temp_Boolean) {
                return Arrays.copyOfRange(str, 2, str.length);
            }
        }
        if (str.length >= 1) {
            temp_Boolean = str[0] == '-';
            if (temp_Boolean) {
                return Arrays.copyOfRange(str, 1, str.length);
            }
        }
        char[] result = new char[str.length];
        System.arraycopy(str, 0, result, 0, str.length);
        return result;
    }
    
}
